Fix text truncation

--- a/src/memberCount/style.css
+++ b/src/memberCount/style.css
@@ -6,4 +6,5 @@
 
 .memberCount-guild-name-wrapper {
 	margin-right: auto;
+	overflow: hidden;
 }
